implemented filter Avviso, mark as read endpoints, edited test
